--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -297,7 +297,7 @@ option(GPROF "" OFF)
 if(PROFILE)
     message(STATUS "Enabling profiling")
     set(BINARY "${BINARY}-profile")
-    set(CFLAGS "${CFLAGS} -O -g -fno-inline -fno-inline-functions")
+    set(CFLAGS "${CFLAGS} -g -fno-inline -fno-inline-functions")
     if(GPROF)
         message(STATUS "Enabling gprof")
         set(CFLAGS "${CFLAGS} -pg")
