--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,8 +153,14 @@ else()
     set(BOOST_COMPONENTS iostreams)
 endif()
 
+if(DOMAINS64)
+    option(NAUTY "" OFF)
+    set(BINARY "${BINARY}-dom64")
+    add_definitions(-DDOMAINS64)
+else()
+    option(NAUTY "" ON)
+endif()
 
-option(NAUTY "" ON)
 if(NAUTY)
   message(STATUS "Please be naughty")
   add_definitions(-DUSE_NAUTY)
