--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,7 +116,8 @@ list(APPEND SRCS ${PROJECT_SOURCE_DIR}/minion/BuildVariables.cpp
                  ${PROJECT_SOURCE_DIR}/minion/preprocess.cpp
                  ${PROJECT_SOURCE_DIR}/minion/build_constraints/BuildStaticStart.cpp
                  ${PROJECT_SOURCE_DIR}/minion/system/trigger_timer.cpp
-                 ${PROJECT_SOURCE_DIR}/minion/help/help.cpp)
+                 ${PROJECT_SOURCE_DIR}/minion/help/help.cpp
+                 ${PROJECT_SOURCE_DIR}/minion/dump_state.cpp)
 
 set(BINARY minion)
 
