--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,7 +177,10 @@ if(APPLEMAC)
     set(Boost_USE_STATIC_LIBS true)
 #    add_definitions(-mmacosx-version-min=10.5)
 #    set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} -mmacosx-version-min=10.5 )
-endif()
+    set(CFLAGS "${CFLAGS} -m32 -mtune=prescott -march=prescott -ffast-math")
+    set(CMAKE_CXX_COMPILER "g++-4.2")
+    set(CMAKE_C_COMPILER "gcc-4.2")
+ endif()
 
 option(STATIC "" OFF)
 if(STATIC)
