--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,7 @@ list(APPEND SRCS ${PROJECT_SOURCE_DIR}/minion/BuildVariables.cpp
                  ${PROJECT_SOURCE_DIR}/minion/build_constraints/BuildStaticStart.cpp
                  ${PROJECT_SOURCE_DIR}/minion/system/trigger_timer.cpp
                  ${PROJECT_SOURCE_DIR}/minion/help/help.cpp
+                 ${PROJECT_SOURCE_DIR}/minion/inputfile_parse/inputfile_parse.cpp
                  ${PROJECT_SOURCE_DIR}/minion/dump_state.cpp)
 
 set(BINARY minion)
@@ -492,12 +493,12 @@ if(NAME)
 endif()
 message(STATUS "Executable name set to \"${BINARY}\"")
 
-add_library(inputfile_parse STATIC ${PROJECT_SOURCE_DIR}/minion/inputfile_parse/inputfile_parse.cpp)
+#add_library(inputfile_parse STATIC ${PROJECT_SOURCE_DIR}/minion/inputfile_parse/inputfile_parse.cpp)
 
 add_library(${BINARY}-lib STATIC EXCLUDE_FROM_ALL ${SRCS})
 
 add_executable(${BINARY} ${SRCS} ${PROJECT_SOURCE_DIR}/minion/minion.cpp)
-target_link_libraries(${BINARY} inputfile_parse)
+#target_link_libraries(${BINARY} inputfile_parse)
 #target_link_libraries(${BINARY} ${BINARY}-lib)
 
 # when we're building minion-something, add a "minion" target that does the sa~
