--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,7 @@ list(APPEND SRCS ${PROJECT_SOURCE_DIR}/minion/BuildVariables.cpp
                  ${PROJECT_SOURCE_DIR}/minion/preprocess.cpp
                  ${PROJECT_SOURCE_DIR}/minion/build_constraints/BuildStaticStart.cpp
                  ${PROJECT_SOURCE_DIR}/minion/system/trigger_timer.cpp
+                 ${PROJECT_SOURCE_DIR}/minion/system/sha1.cpp
                  ${PROJECT_SOURCE_DIR}/minion/help/help.cpp
                  ${PROJECT_SOURCE_DIR}/minion/inputfile_parse/inputfile_parse.cpp
                  ${PROJECT_SOURCE_DIR}/minion/dump_state.cpp)
