Make debugging print mode do right amount of debugging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -300,7 +300,7 @@ if(DEBUG)
     set(BINARY "${BINARY}-debug")
     if(PRINT)
         message(STATUS "Enabling PRINT")
-        add_definitions(-D_GLIBCXX_DEBUG -DMINION_DEBUG_PRINT -DMORE_SEARCH_INFO)
+        add_definitions(-D_GLIBCXX_DEBUG -DMINION_DEBUG -DMINION_DEBUG_PRINT -DMORE_SEARCH_INFO)
     else()
         add_definitions(-D_GLIBCXX_DEBUG -DMINION_DEBUG -DMORE_SEARCH_INFO)
     endif()
