--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,6 +199,10 @@ if(STATIC)
         #set(Boost_USE_STATIC_LIBS true)
         set(CMAKE_EXE_LINKER_FLAGS "-static")
     endif()
+    if(MINGW OR MSYS)
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")
+	set(CFLAGS "${CFLAGS} -static-libgcc -static-libstdc++")
+    endif()
 endif()
 
 set(Boost_ADDITIONAL_VERSIONS "1.41.1" "1.41.0" "1.41" "1.40.1" "1.40.0" "1.40" "1.39.1" "1.39.0" "1.39" "1.38.0" "1.38" "1.37.0" "1.37" "1.36.1" "1.36.0" "1.36" "1.35.1" "1.35.0" "1.35" "1.34.1" "1.34.0" "1.34" "1.33.1" "1.33.0" "1.33")
