--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,8 @@ list(APPEND SRCS ${PROJECT_SOURCE_DIR}/minion/BuildVariables.cpp
                  ${PROJECT_SOURCE_DIR}/minion/inputfile_parse/inputfile_parse.cpp
                  ${PROJECT_SOURCE_DIR}/minion/dump_state.cpp
                  ${PROJECT_SOURCE_DIR}/minion/minlib/gason/gason.cpp
+                ${PROJECT_SOURCE_DIR}/minion/minlib/gason/gason-helper.cpp
+
 )
 
 set(BINARY minion)
