Switch to defaulting domains64

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,13 +158,11 @@ if(THREADSAFE)
     add_definitions(-DTHREADSAFE)
 endif()
 
-option(DOMAINS64 "" OFF)
+option(DOMAINS64 "" ON)
 if(DOMAINS64)
-    option(NAUTY "" OFF)
-    set(BINARY "${BINARY}-dom64")
     add_definitions(-DDOMAINS64)
 else()
-    option(NAUTY "" ON)
+set(BINARY "${BINARY}-dom32")
 endif()
 
 #if(NAUTY)
