--- a/tester/Cargo.toml
+++ b/tester/Cargo.toml
@@ -9,7 +9,7 @@ rand = "0.5"
 itertools = "0.7.8"
 atomic-counter = "1.0.0"
 tempfile = "3"
-simple-error = { version = "0.1.12", git = "https://github.com/ChrisJefferson/simple-error" }
+simple-error = "0.1"
 serde_json = "1.0"
 serde_derive = "1.0"
 serde = "1.0"
