Update to rust 2018

--- a/tester/Cargo.toml
+++ b/tester/Cargo.toml
@@ -2,6 +2,7 @@
 name = "tester"
 version = "0.1.0"
 authors = ["Chris Jefferson <caj21@st-andrews.ac.uk>"]
+edition = "2018"
 
 [dependencies]
 lazy_static = "1.1.0"
