--- a/tester/Cargo.toml
+++ b/tester/Cargo.toml
@@ -10,11 +10,12 @@ rand = "0.7"
 itertools = "0.8"
 atomic-counter = "1.0.0"
 tempfile = "3"
-simple-error = "=0.1.12"
 serde_json = "1.0"
 serde_derive = "1.0"
 serde = "1.0"
 rayon = "1.0"
 num-integer = "0.1"
 structopt = "0.3"
+anyhow = "1.0.13"
+arrayvec = "0.5.1"
 
