Fix windows releases

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -37,11 +37,11 @@ jobs:
       run: |
         mkdir bin
         cd bin
-        ../configure.py
+        python3 ../configure.py
         make minion -j2
     - name: Make Zip
       run: 
-        7z a -tzip ${{ github.workspace }}/bin/minion-${{ matrix.os }}.zip ${{ github.workspace }}/bin/minion
+        7z a -tzip ${{ github.workspace }}/bin/minion-${{ matrix.os }}.zip ${{ github.workspace }}/bin/minion*
     - name: Upload Release Asset
       id: upload-release-asset
       uses: actions/upload-release-asset@v1
