--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,13 @@ steps:
 - bash: |
     cd test_instances
     ./run_tests.sh ../bin-quick/minion
+- script: |
+    if which apt-get; then
+      sudo apt-get install -qq -y valgrind
+    fi
+- bash: |
+    cd test_instances
+    ./do_valgrind_tests.sh ../bin-quick/minion
 - bash: |
     export PATH=$PATH:$HOME/.cargo/bin
     cd tester
