--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,6 @@ steps:
     export PATH=$PATH:$HOME/.cargo/bin
     cd tester
     if which valgrind; then
-      cargo run --release -- --minion ../bin-quick/minion --valgrind --count=3 -n 2
+      cargo run --release -- --minion ../bin-quick/minion --valgrind --count=3 --optioncount=100 -n 2
     fi
   displayName: 'Run minion tests'
