--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,4 +12,4 @@ formats: all
 
 python:
    install:
-      - requirements: docs/requirements.txt
+      - requirements: sphinxdocs/requirements.txt
