--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -57,7 +57,7 @@ jobs:
     - name: Make Zip
       run: |
         7z a -tzip ${{ github.workspace }}/minion.zip ${{ github.workspace }}/bin/minion*
-        cp ${{ github.workspace }}/minion.zip minion-${RELEASE_VERSION}-${{ matrix.release_suffix }}.zip
+        cp ${{ github.workspace }}/minion.zip minion-${{ env.RELEASE_VERSION }}-${{ matrix.release_suffix }}.zip
 
     - name: Create Release
       id: create_release
@@ -66,9 +66,9 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: ${RELEASE_VERSION}
+        name: ${{ env.RELEASE_VERSION }}
         draft: false
         prerelease: false
         generate_release_notes: true
         files: |
-          minion-${RELEASE_VERSION}-${{ matrix.release_suffix }}.zip
+          minion-${{ env.RELEASE_VERSION }}-${{ matrix.release_suffix }}.zip
