--- a/tester/Cargo.toml
+++ b/tester/Cargo.toml
@@ -18,4 +18,4 @@ num-integer = "0.1.45"
 structopt = "0.3.26"
 anyhow = "1.0.75"
 arrayvec = "0.7.4"
-
+clap = { version = "4", features = ["derive"] }
